Database or Entities Completed

--- a/ClothBazar.Web/Web.config
+++ b/ClothBazar.Web/Web.config
@@ -11,6 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
+    <add name="ClothBazarConnections" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ClothBazar-Database;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ClothBazar.Web-20200305072418.mdf;Initial Catalog=aspnet-ClothBazar.Web-20200305072418;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
