--- a/ClothBazar.Service/ClothBazar.Service.csproj
+++ b/ClothBazar.Service/ClothBazar.Service.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CatergoriesService.cs" />
+    <Compile Include="ProductsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
