--- a/ClothBazar.Web/Views/Web.config
+++ b/ClothBazar.Web/Views/Web.config
@@ -19,6 +19,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="ClothBazar.Web" />
         <add namespace="ClothBazar.Entities" />
+        <add namespace="ClothBazar.Service" />
+        
       </namespaces>
     </pages>
   </system.web.webPages.razor>
