page no is property working category delete is not working

--- a/ClothBazar.Web/Views/Web.config
+++ b/ClothBazar.Web/Views/Web.config
@@ -20,6 +20,7 @@
         <add namespace="ClothBazar.Web" />
         <add namespace="ClothBazar.Entities" />
         <add namespace="ClothBazar.Service" />
+        <add namespace="ClothBazar.Web.ViewModels" />
         
       </namespaces>
     </pages>
